@@ -1,5 +1,13 @@
 2014-10-08  Hani Benhabiles  <hani.benhabiles@greenbone.net>
 
+	* src/attack.c (launch_plugin): Remove useless memory allocations and
+	clean code.
+
+	* src/pluginlaunch.c (process_internal_msg): Code style fix. Don't make
+	variables static.
+
+2014-10-08  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
 	* src/comm.c (send_plug_info), src/pluginscheduler.c (hash_add)
 	(plugins_scheduler_init): Call nvticache_get_by_oid_full() instead of
 	nvticache_get_by_oid().
